building contact component

--- a/src/App.css
+++ b/src/App.css
@@ -484,7 +484,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
   z-index: -4;
 }
 
-/* continue css from tutorial @21:35 link:  https://www.youtube.com/watch?v=hYv6BM2fWd8&t=425s */
+/* css from tutorial link:  https://www.youtube.com/watch?v=hYv6BM2fWd8&t=425s */
 
  
 
