--- a/src/App.css
+++ b/src/App.css
@@ -320,6 +320,21 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
 
 
 /************ Skills Css ************/
+.item{
+
+  margin: 10px;
+}
+
+
+.skillCardItem{
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+  background-color: rgb(50, 50, 50);
+  border-radius: 20px;
+  
+  }
+
 .skill {
   background: linear-gradient(180.21deg, rgb(50, 50, 50), black);
   padding: 0 0 50px 0;
@@ -362,6 +377,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
 }
 
 /************ Projects Css ************/
+
+
 
 .projectTab{
 background-color: #151515 !important;
