--- a/src/App.css
+++ b/src/App.css
@@ -14,166 +14,155 @@
   src: url("./assets/font/CentraNo2-Book.ttf");
 }
 
-
-
 /* Default CSS */
 
-*{
-
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html{
-scroll-behavior: smooth;
-scroll-padding-top: 75px;
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 75px;
 }
 
-body{
-font-weight: 400;
-overflow-x:  hidden !important;
-position: relative;
-background-color: #121212 !important;
-color: white !important;
-font-family: 'Centra', sans-serif !important;
+body {
+  font-weight: 400;
+  overflow-x: hidden !important;
+  position: relative;
+  background-color: #121212 !important;
+  color: white !important;
+  font-family: "Centra", sans-serif !important;
 }
 
-h1,h2,h3,h4,h5,h6{
-margin: 0;
-padding: 0;
-line-height: normal;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
 }
 
 /* Navbar CSS */
 
-nav.navbar{
-padding: 18px 0;
-position: fixed;
-width: 100%;
-top: 0;
-z-index: 9999;
-transition: 0.32 ease-in-out
+nav.navbar {
+  padding: 18px 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 9999;
+  transition: 0.32 ease-in-out;
 }
 
 nav.navbar.scrolled {
-padding: 0px 0;
-background-color: #151515;
+  padding: 0px 0;
+  background-color: #151515;
 }
 
-
-nav.navbar a.navbar-brand{
-width: 9%;
-
+nav.navbar a.navbar-brand {
+  width: 9%;
 }
 
 nav.navbar .navbar-nav .nav-link.navbar-link {
-
-font-weight: 400;
-color: #fff;
-letter-spacing: 0.8px;
-padding: 0 25px;
-font-size: 18px;
-opacity: .75; 
-
+  font-weight: 400;
+  color: #fff;
+  letter-spacing: 0.8px;
+  padding: 0 25px;
+  font-size: 18px;
+  opacity: 0.75;
 }
 
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
-nav.navbar .navbar-nav a.nav-link.navbar-link:active{
-
-opacity: 1;
-
+nav.navbar .navbar-nav a.nav-link.navbar-link:active {
+  opacity: 1;
 }
 
-span.navbar-text{
-
+span.navbar-text {
   display: flex;
   align-items: center;
-
 }
 
-.social-icon{
-
-display: inline-block;
-margin-left: 14px;
-
+.social-icon {
+  display: inline-block;
+  margin-left: 14px;
 }
 
-.social-icon a{
-width: 42px;
-height: 42px;
-background: black;
-display: inline-flex;
-border-radius:50%;
-margin-right: 6px;
-align-items:center; 
-justify-content: center;
-line-height: 1;
-border: 1px solid rgba(255,255,255, 0.5)
+.social-icon a {
+  width: 42px;
+  height: 42px;
+  background: black;
+  display: inline-flex;
+  border-radius: 50%;
+  margin-right: 6px;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.social-icon a::before{
-content: "";
-width: 42px;
-height: 42px;
-position: absolute;
-background-color: #ffffff;
-border-radius: 50%;
-transform: scale(0);
-transition: 0.3s ease-in-out;
+.social-icon a::before {
+  content: "";
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  background-color: #ffffff;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 0.3s ease-in-out;
 }
 
-.social-icon a:hover::before{
-
-transform:scale(1);
-
+.social-icon a:hover::before {
+  transform: scale(1);
 }
 
-.social-icon a img{
-width: 40%;
-z-index: 1;
-transition: 0.3s ease-in-out;
+.social-icon a img {
+  width: 40%;
+  z-index: 1;
+  transition: 0.3s ease-in-out;
 }
 
-.social-icon a:hover img{
-  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) ;
+.social-icon a:hover img {
+  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%)
+    hue-rotate(346deg);
 }
 
-.navbar-text button{
-font-weight: 700;
-color: #fff;
-border: 1px solid #fff;
-padding: 18px 34px;
-font-size: 18px;
-margin-left: 18px;
-position: relative;
-background-color: transparent;
-transition: 0.3s ease-in-out;
+.navbar-text button {
+  font-weight: 700;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 18px 34px;
+  font-size: 18px;
+  margin-left: 18px;
+  position: relative;
+  background-color: transparent;
+  transition: 0.3s ease-in-out;
 }
 
-.navbar-text button span{
-
-z-index: 1;
+.navbar-text button span {
+  z-index: 1;
 }
 
-.navbar-text button::before{
-content: "";
-width: 0%;
-height: 100%;
-position: absolute;
-background-color: #ffffff;
-left: 0;
-top: 0;
-z-index: -1;
-transition: 0.3s ease-in-out;
+.navbar-text button::before {
+  content: "";
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  background-color: #ffffff;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
 }
 
-.navbar-text button:hover{
+.navbar-text button:hover {
   color: #121212;
 }
 
-.navbar-text button:hover::before{
-
+.navbar-text button:hover::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -181,72 +170,64 @@ transition: 0.3s ease-in-out;
 }
 
 nav.navbar .navbar-toggler:active,
-nav.navbar .navbar-toggler:focus{
-outline: none;
-box-shadow: none;
+nav.navbar .navbar-toggler:focus {
+  outline: none;
+  box-shadow: none;
 }
 
-nav.navbar .navbar-toggler-icon{
-width: 24px;
-height: 17px;
-background-image: none;
-position: relative;
-border-bottom: 2px solid #fff;
-transition: all 300ms linear;
-top: -2px;
+nav.navbar .navbar-toggler-icon {
+  width: 24px;
+  height: 17px;
+  background-image: none;
+  position: relative;
+  border-bottom: 2px solid #fff;
+  transition: all 300ms linear;
+  top: -2px;
 }
 
-
-nav.navbar .navbar-toggler-icon:focus{
-
+nav.navbar .navbar-toggler-icon:focus {
   border-bottom: 2px solid #fff;
 }
 
-
 nav.navbar .navbar-toggler-icon:after,
-nav.navbar .navbar-toggler-icon:before{
-width: 24px;
-position: absolute;
-height: 2px;
-background-color: #fff;
-top: 0;
-left: 0;
-content: "";
-z-index: 2;
-transition: all 300ms linear;
+nav.navbar .navbar-toggler-icon:before {
+  width: 24px;
+  position: absolute;
+  height: 2px;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  content: "";
+  z-index: 2;
+  transition: all 300ms linear;
 }
 
-nav.navbar .navbar-toggler-icon:after{
-
+nav.navbar .navbar-toggler-icon:after {
   top: 8px;
 }
 
-nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after{
-
-transform: rotate(45deg);
-background-color: #fff;
-height: 2px;
+nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
+  transform: rotate(45deg);
+  background-color: #fff;
+  height: 2px;
 }
 
-
-nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before{
-transform: translateY(8px) rotate(-45deg);
-background-color: #fff;
-height: 2px;
+nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
+  transform: translateY(8px) rotate(-45deg);
+  background-color: #fff;
+  height: 2px;
 }
 
-nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
-
+nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-color: transparent;
 }
 
-.navLogo{
-
+.navLogo {
   padding-right: 50px;
 }
 
 /************ Banner Css ************/
-.banner{
+.banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
   background-color: rgb(50, 50, 50);
@@ -255,7 +236,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
   background-size: cover;
   background-repeat: no-repeat;
 }
-.banner .tagline{
+.banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
   padding: 8px 10px;
@@ -275,7 +256,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
   display: block;
 }
 .banner p {
-  color: #B8B8B8;
+  color: #b8b8b8;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -304,36 +285,32 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
   animation: updown 3s linear infinite;
 }
 @keyframes updown {
-    0% {
-        transform: translateY(-20px);
-    }
-    50% {
-        transform: translateY(20px);
-    }
-    100% {
-        transform: translateY(-20px);
-    }
+  0% {
+    transform: translateY(-20px);
+  }
+  50% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
 }
 .txt-rotate > .wrap {
   border-right: 0.08em solid #666;
 }
 
-
 /************ Skills Css ************/
-.item{
-
+.item {
   margin: 10px;
 }
 
-
-.skillCardItem{
+.skillCardItem {
   width: 100%;
   height: 100%;
   margin: 10px;
   background-color: rgb(50, 50, 50);
   border-radius: 20px;
-  
-  }
+}
 
 .skill {
   background: linear-gradient(180.21deg, rgb(50, 50, 50), black);
@@ -349,15 +326,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
   margin-top: -60px;
 }
 .skill h2 {
-	font-size: 45px;
-	font-weight: 700;
+  font-size: 45px;
+  font-weight: 700;
 }
 .skill p {
-    color: #B8B8B8;
-    font-size: 18px;
-    letter-spacing: 0.8px;
-    line-height: 1.5em;
-    margin: 14px 0 75px 0;
+  color: #b8b8b8;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px 0 75px 0;
 }
 .skill-slider {
   width: 80%;
@@ -378,16 +355,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
 
 /************ Projects Css ************/
 
-
-
-.projectTab{
-background-color: #151515 !important;
-color: white !important;
+.projectTab {
+  background-color: #151515 !important;
+  color: white !important;
 }
 
-
-.projectsBg{
-background-color: black;
+.projectsBg {
+  background-color: black;
 }
 
 .project {
@@ -396,12 +370,12 @@ background-color: black;
   background-color: black !important;
 }
 .project h2 {
-	font-size: 45px;
-	font-weight: 700;
+  font-size: 45px;
+  font-weight: 700;
   text-align: center;
 }
 .project p {
-  color: #B8B8B8;
+  color: #b8b8b8;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -434,21 +408,21 @@ background-color: black;
   z-index: 0;
 }
 .project .nav.nav-pills .nav-link::before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 100%;
-    background: linear-gradient(180.00deg, grey, black);
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 100%;
+  background: linear-gradient(180deg, grey, black);
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
 }
 .project .nav.nav-pills .nav-link.active::before {
-    width: 100% !important;
+  width: 100% !important;
 }
 .project .nav.nav-pills .nav-link.active {
-    border: 1px solid rgba(255, 255, 255, 1);
+  border: 1px solid rgba(255, 255, 255, 1);
 }
 .nav-link#projects-tabs-tab-first {
   border: 1px solid rgba(255, 255, 255, 0.5);
@@ -470,7 +444,7 @@ background-color: black;
 }
 .proj-imgbx::before {
   content: "";
-  background: linear-gradient(108.00deg, grey, black);
+  background: linear-gradient(108deg, grey, black);
   opacity: 0.85;
   position: absolute;
   width: 100%;
@@ -525,11 +499,12 @@ background-color: black;
   width: 92%;
 }
 .contact h2 {
-	font-size: 45px;
-	font-weight: 700;
+  font-size: 45px;
+  font-weight: 700;
   margin-bottom: 30px;
 }
-.contact form input, .contact form textarea {
+.contact form input,
+.contact form textarea {
   width: 100%;
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.5);
@@ -542,16 +517,19 @@ background-color: black;
   letter-spacing: 0.8px;
   transition: 0.3s ease-in-out;
 }
-.contact form input:focus, .contact form textarea:focus {
+.contact form input:focus,
+.contact form textarea:focus {
   background: rgba(255, 255, 255, 1);
   color: #121212;
 }
-.contact form input::placeholder, .contact form textarea::placeholder {
+.contact form input::placeholder,
+.contact form textarea::placeholder {
   font-size: 16px;
   font-weight: 400;
   color: #fff;
 }
-.contact form input:focus::placeholder, .contact form textarea:focus::placeholder {
+.contact form input:focus::placeholder,
+.contact form textarea:focus::placeholder {
   color: #121212;
   opacity: 0.8;
 }
@@ -589,8 +567,6 @@ background-color: black;
 }
 
 /* css from tutorial link:  https://www.youtube.com/watch?v=hYv6BM2fWd8&t=425s */
-
- 
 
 /* React styles */
 .App {
