--- a/src/App.css
+++ b/src/App.css
@@ -53,14 +53,15 @@ nav.navbar {
   padding: 18px 0;
   position: fixed;
   width: 100%;
+  height: 10%;
   top: 0;
   z-index: 9999;
   transition: 0.32 ease-in-out;
+  background-color:  #151515 ;
 }
 
 nav.navbar.scrolled {
   padding: 0px 0;
-  background-color: #151515;
 }
 
 nav.navbar a.navbar-brand {
@@ -227,6 +228,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /************ Banner Css ************/
+
+.bannerButton{
+display: flex;
+border-radius: 20px;
+width: 180px;
+  height: 60px;
+  border: none;
+  padding: 15px;
+}
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
